[package]
name = "doctor-diff-cli"
version = "0.1.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Tool for creating and applying compressed archives of changes between two directory workspaces"
license = "MIT"
documentation = "https://docs.rs/doctor-diff"
repositiory = "https://github.com/PsichiX/doctor-diff"
homepage = "https://github.com/PsichiX/doctor-diff"

[[bin]]
name = "doctor-diff"
path = "./src/main.rs"

[dependencies]
doctor-diff-core = { version = "0.1", path = "../doctor-diff-core" }
clap = "2.33"
